@@ -20,7 +20,6 @@ import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -347,7 +346,7 @@ public class SolrSnapshotMetaDataManager {
       }
     }
 
-    dir.sync(Collections.singletonList(fileName));
+    dir.sync(List.of(fileName));
 
     if (nextWriteGen > 0) {
       String lastSaveFile = SNAPSHOTS_PREFIX + (nextWriteGen - 1);
