@@ -19,14 +19,13 @@ package org.apache.solr.handler.designer;
 
 import static org.apache.solr.common.util.Utils.toJavabin;
 import static org.apache.solr.handler.admin.ConfigSetsHandler.DEFAULT_CONFIGSET_NAME;
-import static org.apache.solr.handler.designer.SchemaDesignerAPI.getMutableId;
+import static org.apache.solr.handler.designer.SchemaDesigner.getMutableId;
 import static org.apache.solr.schema.IndexSchema.NEST_PATH_FIELD_NAME;
 import static org.apache.solr.schema.IndexSchema.ROOT_FIELD_NAME;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.zip.ZipEntry;
@@ -38,6 +37,7 @@ import org.apache.solr.common.util.Utils;
 import org.apache.solr.core.CoreContainer;
 import org.apache.solr.core.SolrConfig;
 import org.apache.solr.filestore.FileStore;
+import org.apache.solr.handler.configsets.DownloadConfigSet;
 import org.apache.solr.schema.FieldType;
 import org.apache.solr.schema.ManagedIndexSchema;
 import org.apache.solr.schema.SchemaField;
@@ -75,7 +75,7 @@ public class TestSchemaDesignerConfigSetHelper extends SolrCloudTestCase
     assertNotNull(cluster);
     cc = cluster.getJettySolrRunner(0).getCoreContainer();
     assertNotNull(cc);
-    helper = new SchemaDesignerConfigSetHelper(cc, SchemaDesignerAPI.newSchemaSuggester());
+    helper = new SchemaDesignerConfigSetHelper(cc, SchemaDesigner.newSchemaSuggester());
   }
 
   @Test
@@ -110,16 +110,17 @@ public class TestSchemaDesignerConfigSetHelper extends SolrCloudTestCase
 
     schema =
         helper.syncLanguageSpecificObjectsAndFiles(
-            configSet, schema, Collections.emptyList(), true, DEFAULT_CONFIGSET_NAME);
+            configSet, schema, List.of(), true, DEFAULT_CONFIGSET_NAME);
     assertEquals(2, schema.getSchemaZkVersion());
 
-    byte[] zipped = helper.downloadAndZipConfigSet(mutableId);
+    byte[] zipped = DownloadConfigSet.zipConfigSet(cc.getConfigSetService(), mutableId);
     assertTrue(zipped != null && zipped.length > 0);
   }
 
   @Test
   public void testDownloadAndZip() throws IOException {
-    byte[] zipped = helper.downloadAndZipConfigSet(DEFAULT_CONFIGSET_NAME);
+    byte[] zipped =
+        DownloadConfigSet.zipConfigSet(cc.getConfigSetService(), DEFAULT_CONFIGSET_NAME);
     ZipInputStream stream = new ZipInputStream(new ByteArrayInputStream(zipped));
 
     boolean foundSolrConfig = false;
@@ -150,14 +151,14 @@ public class TestSchemaDesignerConfigSetHelper extends SolrCloudTestCase
 
     schema =
         helper.syncLanguageSpecificObjectsAndFiles(
-            configSet, schema, Collections.singletonList("en"), true, DEFAULT_CONFIGSET_NAME);
+            configSet, schema, List.of("en"), true, DEFAULT_CONFIGSET_NAME);
     assertNotNull(schema.getFieldTypeByName("text_en"));
     assertNotNull(schema.getFieldOrNull("*_txt_en"));
     assertNull(schema.getFieldTypeByName("text_fr"));
 
     schema =
         helper.syncLanguageSpecificObjectsAndFiles(
-            configSet, schema, Collections.singletonList("en"), false, DEFAULT_CONFIGSET_NAME);
+            configSet, schema, List.of("en"), false, DEFAULT_CONFIGSET_NAME);
     assertNotNull(schema.getFieldTypeByName("text_en"));
     assertNull(schema.getFieldOrNull("*_txt_en"));
     assertNull(schema.getFieldTypeByName("text_fr"));
@@ -177,7 +178,7 @@ public class TestSchemaDesignerConfigSetHelper extends SolrCloudTestCase
     assertTrue(
         cluster
             .getZkClient()
-            .exists(SchemaDesignerAPI.getConfigSetZkPath(mutableId, "lang/stopwords_en.txt")));
+            .exists(SchemaDesigner.getConfigSetZkPath(mutableId, "lang/stopwords_en.txt")));
     assertNotNull(schema.getFieldTypeByName("text_fr"));
     assertNotNull(schema.getFieldOrNull("*_txt_fr"));
     assertNull(schema.getFieldOrNull("*_txt_ga"));
@@ -185,8 +186,7 @@ public class TestSchemaDesignerConfigSetHelper extends SolrCloudTestCase
     // add a field that uses text_en and then try removing "en" from the lang set
     helper.createCollection(mutableId, mutableId); // need to create field
     Map<String, Object> addField = Map.of("name", "title", "type", "text_en");
-    String addedFieldName =
-        helper.addSchemaObject(configSet, Collections.singletonMap("add-field", addField));
+    String addedFieldName = helper.addSchemaObject(configSet, Map.of("add-field", addField));
     assertEquals("title", addedFieldName);
 
     schema = helper.loadLatestSchema(helper.loadSolrConfig(mutableId));
@@ -194,20 +194,20 @@ public class TestSchemaDesignerConfigSetHelper extends SolrCloudTestCase
 
     schema =
         helper.syncLanguageSpecificObjectsAndFiles(
-            configSet, schema, Collections.singletonList("fr"), true, DEFAULT_CONFIGSET_NAME);
+            configSet, schema, List.of("fr"), true, DEFAULT_CONFIGSET_NAME);
     assertNotNull(schema.getFieldTypeByName("text_en")); // being used, so not removed
     assertNotNull(schema.getFieldOrNull("*_txt_en"));
     assertTrue(
         cluster
             .getZkClient()
-            .exists(SchemaDesignerAPI.getConfigSetZkPath(mutableId, "lang/stopwords_en.txt")));
+            .exists(SchemaDesigner.getConfigSetZkPath(mutableId, "lang/stopwords_en.txt")));
     assertNotNull(schema.getFieldTypeByName("text_fr"));
     assertNotNull(schema.getFieldOrNull("*_txt_fr"));
     assertNull(schema.getFieldOrNull("*_txt_ga"));
 
     schema =
         helper.syncLanguageSpecificObjectsAndFiles(
-            configSet, schema, Collections.emptyList(), true, DEFAULT_CONFIGSET_NAME);
+            configSet, schema, List.of(), true, DEFAULT_CONFIGSET_NAME);
     assertNotNull(schema.getFieldTypeByName("text_en"));
     assertNotNull(schema.getFieldOrNull("*_txt_en"));
     assertNotNull(schema.getFieldTypeByName("text_fr"));
@@ -217,7 +217,7 @@ public class TestSchemaDesignerConfigSetHelper extends SolrCloudTestCase
 
     schema =
         helper.syncLanguageSpecificObjectsAndFiles(
-            configSet, schema, Collections.emptyList(), false, DEFAULT_CONFIGSET_NAME);
+            configSet, schema, List.of(), false, DEFAULT_CONFIGSET_NAME);
     assertNotNull(schema.getFieldTypeByName("text_en"));
     assertNull(schema.getFieldOrNull("*_txt_en"));
     assertNotNull(schema.getFieldTypeByName("text_fr"));
@@ -283,8 +283,7 @@ public class TestSchemaDesignerConfigSetHelper extends SolrCloudTestCase
     helper.createCollection(mutableId, mutableId);
 
     Map<String, Object> addField = Map.of("name", "title", "type", "text_en");
-    String addedFieldName =
-        helper.addSchemaObject(configSet, Collections.singletonMap("add-field", addField));
+    String addedFieldName = helper.addSchemaObject(configSet, Map.of("add-field", addField));
     assertEquals("title", addedFieldName);
 
     Map<String, Object> analysis =
@@ -309,14 +308,11 @@ public class TestSchemaDesignerConfigSetHelper extends SolrCloudTestCase
 
     // add / update field
     Map<String, Object> addField = Map.of("name", "author", "type", "string");
-    String addedFieldName =
-        helper.addSchemaObject(configSet, Collections.singletonMap("add-field", addField));
+    String addedFieldName = helper.addSchemaObject(configSet, Map.of("add-field", addField));
     assertEquals("author", addedFieldName);
 
     helper.addSchemaObject(
-        configSet,
-        Collections.singletonMap(
-            "add-field", Map.of("name", "_catch_all_", "type", "text_general")));
+        configSet, Map.of("add-field", Map.of("name", "_catch_all_", "type", "text_general")));
 
     Map<String, Object> updateField =
         Map.of("name", "author", "type", "string", "copyDest", "_text_");
@@ -336,8 +332,8 @@ public class TestSchemaDesignerConfigSetHelper extends SolrCloudTestCase
     assertEquals(false, resp.get("rebuild"));
 
     latest = helper.loadLatestSchema(helper.loadSolrConfig(mutableId));
-    assertEquals(Collections.singletonList("author"), latest.getCopySources("_text_"));
-    assertEquals(Collections.singletonList("author"), latest.getCopySources("_catch_all_"));
+    assertEquals(List.of("author"), latest.getCopySources("_text_"));
+    assertEquals(List.of("author"), latest.getCopySources("_catch_all_"));
 
     updateField = Map.of("name", "author", "type", "string", "copyDest", "");
     latest = helper.loadLatestSchema(helper.loadSolrConfig(mutableId));
@@ -362,8 +358,7 @@ public class TestSchemaDesignerConfigSetHelper extends SolrCloudTestCase
 
     // add / update field
     Map<String, Object> addField = Map.of("name", "author", "type", "string");
-    String addedFieldName =
-        helper.addSchemaObject(configSet, Collections.singletonMap("add-field", addField));
+    String addedFieldName = helper.addSchemaObject(configSet, Map.of("add-field", addField));
     assertEquals("author", addedFieldName);
 
     Map<String, Object> updateField = Map.of("name", "author", "type", "string", "required", true);
@@ -401,7 +396,7 @@ public class TestSchemaDesignerConfigSetHelper extends SolrCloudTestCase
 
     // did the copy field update get applied?
     latest = helper.loadLatestSchema(helper.loadSolrConfig(mutableId));
-    assertEquals(Collections.singletonList("author"), latest.getCopySources("_text_"));
+    assertEquals(List.of("author"), latest.getCopySources("_text_"));
 
     // switch the author field type to strings
     updateField =
@@ -417,8 +412,7 @@ public class TestSchemaDesignerConfigSetHelper extends SolrCloudTestCase
     // add / update field type
     Map<String, Object> addType =
         Map.of("name", "testType", "class", "solr.StrField", "docValues", true);
-    String addTypeName =
-        helper.addSchemaObject(configSet, Collections.singletonMap("add-field-type", addType));
+    String addTypeName = helper.addSchemaObject(configSet, Map.of("add-field-type", addType));
     assertEquals("testType", addTypeName);
 
     latest = helper.loadLatestSchema(helper.loadSolrConfig(mutableId));
@@ -441,8 +435,7 @@ public class TestSchemaDesignerConfigSetHelper extends SolrCloudTestCase
     // add / update dynamic field
     Map<String, Object> addDynField = Map.of("name", "*_test", "type", "string");
     String addedDynFieldName =
-        helper.addSchemaObject(
-            configSet, Collections.singletonMap("add-dynamic-field", addDynField));
+        helper.addSchemaObject(configSet, Map.of("add-dynamic-field", addDynField));
     assertEquals("*_test", addedDynFieldName);
 
     // update the dynamic field
