@@ -21,7 +21,6 @@ import java.lang.invoke.MethodHandles;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -46,6 +45,7 @@ import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.util.IOUtils;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.embedded.JettySolrRunner;
+import org.apache.solr.util.ErrorLogMuter;
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
 import org.slf4j.Logger;
@@ -119,7 +119,7 @@ public class TestCloudJSONFacetJoinDomain extends SolrCloudTestCase {
         .setProperties(collectionProperties)
         .process(cluster.getSolrClient());
 
-    CLOUD_CLIENT = cluster.basicSolrClientBuilder().withDefaultCollection(COLLECTION_NAME).build();
+    CLOUD_CLIENT = cluster.newSolrClient(COLLECTION_NAME);
 
     waitForRecoveriesToFinish(CLOUD_CLIENT);
 
@@ -199,32 +199,32 @@ public class TestCloudJSONFacetJoinDomain extends SolrCloudTestCase {
   }
 
   /** Sanity check that malformed requests produce errors */
+  @SuppressWarnings("try")
   public void testMalformedGivesError() {
-
-    ignoreException(".*'join' domain change.*");
-
-    for (String join :
-        Arrays.asList(
-            "bogus",
-            "{ }",
-            "{ from:null, to:foo_s }",
-            "{ from:foo_s }",
-            "{ from:foo_s, to:foo_s, bogus:'what what?' }",
-            "{ to:foo_s, bogus:'what what?' }")) {
-      SolrException e =
-          expectThrows(
-              SolrException.class,
-              () -> {
-                final SolrParams req =
-                    params(
-                        "q",
-                        "*:*",
-                        "json.facet",
-                        "{ x : { type:terms, field:x_s, domain: { join:" + join + " } } }");
-                getRandClient(random()).request(new QueryRequest(req));
-              });
-      assertEquals(join + " -> " + e, SolrException.ErrorCode.BAD_REQUEST.code, e.code());
-      assertTrue(join + " -> " + e, e.getMessage().contains("'join' domain change"));
+    try (ErrorLogMuter ignored = ErrorLogMuter.regex(".*'join' domain change.*")) {
+      for (String join :
+          Arrays.asList(
+              "bogus",
+              "{ }",
+              "{ from:null, to:foo_s }",
+              "{ from:foo_s }",
+              "{ from:foo_s, to:foo_s, bogus:'what what?' }",
+              "{ to:foo_s, bogus:'what what?' }")) {
+        SolrException e =
+            expectThrows(
+                SolrException.class,
+                () -> {
+                  final SolrParams req =
+                      params(
+                          "q",
+                          "*:*",
+                          "json.facet",
+                          "{ x : { type:terms, field:x_s, domain: { join:" + join + " } } }");
+                  getRandClient(random()).request(new QueryRequest(req));
+                });
+        assertEquals(join + " -> " + e, SolrException.ErrorCode.BAD_REQUEST.code, e.code());
+        assertTrue(join + " -> " + e, e.getMessage().contains("'join' domain change"));
+      }
     }
   }
 
@@ -636,7 +636,7 @@ public class TestCloudJSONFacetJoinDomain extends SolrCloudTestCase {
           ((Number) facetResponse.get("count")).longValue());
       if (0 == rsp.getResults().getNumFound()) {
         // when the query matches nothing, we should expect no top level facets
-        expected = Collections.emptyMap();
+        expected = Map.of();
       }
       assertFacetCountsAreCorrect(maxBucketsToCheck, expected, baseParams, facetResponse);
     } catch (AssertionError e) {
